        - data structures
          - add interfaces IBooleanMatrix and IPosOnlyFeedback
          - make PosOnlyFeedback generic to allow different backends
          - add SparseBooleanMatrixBinarySearch and SparseBooleanMatrixStatic
          - IMatrix<T> interface: add Transpose() method
          - SparseBooleanMatrix: remove Rows() method (not necessary)
          - Matrix<T>: perform bounds check only when DEBUG is set;
            faster GetRow()/SetRow(); generic return types
          - MatrixUtils: remove ContainsNaN()
          - VectorUtils: add L1Norm()
          - fix bug in Ratings that prevented online updates to work properly
            (reported by Chris Newell)
	- documentation
          - some API doc improvements
          - get rid of the word 'engine', as it usually carries no relevant
            information
        - IO
          - minor speed-up: do not .Trim() lines before checking whether they
            are empty
	- misc
          - move GridSearch to experimental section
          - add Nelder-Mead algorithm for hyperparameter selection; currently
            only rating prediction is supported (experimental)
          - remove obsolete option_file functionality

1.02	2011-05-24
	- recommenders
          - BPR_Linear: less verbose output
          - BPRMF: fix loading/saving of models
          - BiasedMatrixFactorization: simplify a bit
          - SlopeOne: move computation of rating average to Train()
	  - BiPolarSlopeOne: fix loading/saving of models
          - UserItemBias: set default values for reg_u and reg_i
	- command-line tools
	  - item prediction: fix null pointer exception when no --test-file is
            given
          - rating prediction: save model file in all cases when requested
        - documentation
          - fix Doxygen API doc (wrong path)
          - Doxygen: do not build LaTeX doc; add main page
          - remove <inheritdoc/> XML tags - currently not supported by any
            tool we use