@@ -41,8 +41,11 @@
           - add SparseBooleanMatrixBinarySearch and SparseBooleanMatrixStatic
           - IMatrix<T> interface: add Transpose() method
           - SparseBooleanMatrix: remove Rows() method (not necessary)
-          - Matrix<T>: perform bounds check only when DEBUG is set;
-            faster GetRow()/SetRow(); generic return types
+          - Matrix<T>:
+            - perform bounds check only when DEBUG is set
+            - faster GetRow()/SetRow()
+            - generic return types
+            - additional constructor with list of list of T as argument
           - MatrixUtils: remove ContainsNaN()
           - VectorUtils: add L1Norm()
           - fix bug in Ratings that prevented online updates to work properly
